# aoc

./: .gitignore  description.md
python/: pyproject.toml  token
python/2015/: bad_formatting.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  evaluate_day14.txt  puzzle_day8.txt  test_days_13_thru_25.py  test_days_1_thru_12.py
python/2024/: day1.py  day2.py  day3.py  day4.py  test_day1.py  test_day2.py  test_day3.py  test_day4.py
