[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["dbruce-ae05 <dbruce.ae05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.12, <3.13"

[tool.poetry.group.Dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
